--- a/index.html
+++ b/index.html
@@ -14,47 +14,16 @@
 </div>
 
 <div class="card_box">
-    <h5 class="title">To'rburchak usuli</h5>
-    <h6 class="text">A B oraliqni kiriting</h6>
+    <h6 class="text">X va Y larni kiriting</h6>
     <div class="inp_box">
-        <input class="a input_n" type="number" placeholder="a">
-        <input class="b input_n" type="number" placeholder="b">
+        <div class="input_box">
+          <input class="a input_n" type="text" placeholder="X0,X1, ...">
+          <input class="b input_n" type="text" placeholder="Y0,Y1, ...">
+        </div>
         <button class="ok" id="ok">Submit</button>
     </div>
     <span class="natija text"><span>Natija</span></span>
     <table class="tabletsiya_turt">
-        <tr>
-          <th>T/r</th>
-          <th>Natija</th>
-        </tr>
-      </table>
-</div>
-<div class="card_box">
-    <h5 class="title">Trapetsiya usuli</h5>
-    <h6 class="text">A B oraliqni kiriting</h6>
-    <div class="inp_box">
-        <input class="at input_n" type="number" placeholder="a">
-        <input class="bt input_n" type="number" placeholder="b">
-        <button class="ok" id="ok_trap">Submit</button>
-    </div>
-    <span class="natija text"><span>Natija</span></span>
-    <table class="tabletsiya_trap">
-        <tr>
-          <th>T/r</th>
-          <th>Natija</th>
-        </tr>
-      </table>
-</div>
-<div class="card_box">
-    <h5 class="title">Simson usuli</h5>
-    <h6 class="text">A B oraliqni kiriting</h6>
-    <div class="inp_box">
-        <input class="as input_n" type="number" placeholder="a">
-        <input class="bs input_n" type="number" placeholder="b">
-        <button class="ok" id="ok_simson">Submit</button>
-    </div>
-    <span class="natija text"><span>Natija</span></span>
-    <table class="tabletsiya_simson">
         <tr>
           <th>T/r</th>
           <th>Natija</th>
